<resources>
    <string name="app_name">CustomDrawerLayout</string>

    <string name="close_drawer">Cerrar drawer</string>
    <string name="open_drawer">Abrir drawer</string>

    <string name="menu_call">Llamar</string>
    <string name="menu_gallery">Galeria</string>
    <string name="menu_camera">Camara</string>
    <string name="menu_agenda">Agenda</string>
    <string name="menu_share">Compartir</string>
    <string name="menu_send">Enviar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>