<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">
    <group
        android:id="@+id/group_call"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_call"
            android:icon="@android:drawable/ic_menu_call"
            android:title="@string/menu_call" />
        <item
            android:id="@+id/menu_gallery"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/menu_camera"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/menu_camera" />
        <item
            android:id="@+id/menu_agenda"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/menu_agenda" />

    </group>
    <item
        android:title="Acciones extras">
        <menu >
            <group
                android:id="@+id/group_extras"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_share"
                    android:icon="@android:drawable/ic_menu_share"
                    android:title="@string/menu_share" />
                <item
                    android:id="@+id/menu_send"
                    android:icon="@android:drawable/ic_menu_send"
                    android:title="@string/menu_send" />
            </group>
        </menu>
    </item>
</menu>